# ChangeLog for media-gfx/imagemagick
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.523 2014/01/20 18:54:04 ssuominen Exp $

*imagemagick-6.8.8.2 (20 Jan 2014)

  20 Jan 2014; Samuli Suominen <ssuominen@gentoo.org>
  +imagemagick-6.8.8.2.ebuild:
  Version bump; switch from media-libs/jasper to media-libs/openjpeg for jpeg2k
  support.

  12 Jan 2014; Markus Meier <maekke@gentoo.org> imagemagick-6.8.8.1.ebuild:
  use subslot operator deps where possible

*imagemagick-6.8.8.1 (04 Jan 2014)

  04 Jan 2014; Samuli Suominen <ssuominen@gentoo.org>
  +imagemagick-6.8.8.1.ebuild:
  Version bump (as requested by Arfrever)

  21 Nov 2013; Jeroen Roovers <jer@gentoo.org> imagemagick-6.8.7.5.ebuild:
  Marked ~hppa (bug #491876).

*imagemagick-6.8.7.5 (21 Nov 2013)

  21 Nov 2013; Samuli Suominen <ssuominen@gentoo.org>
  +imagemagick-6.8.7.5.ebuild:
  Version bump.

  19 Sep 2013; Samuli Suominen <ssuominen@gentoo.org>
  imagemagick-6.8.6.8-r1.ebuild:
  Prevent sandbox violation with USE="opencl" wrt #472766 by Jason Lamb

  07 Sep 2013; Agostino Sarubbo <ago@gentoo.org> imagemagick-6.8.6.8.ebuild:
  Stable for sparc, wrt bug #481146

  05 Sep 2013; Jeroen Roovers <jer@gentoo.org> imagemagick-6.8.6.8.ebuild:
  Stable for HPPA (bug #481146).

  05 Sep 2013; Agostino Sarubbo <ago@gentoo.org> imagemagick-6.8.6.8.ebuild:
  Stable for ppc64, wrt bug #481146

  02 Sep 2013; Agostino Sarubbo <ago@gentoo.org> imagemagick-6.8.6.8.ebuild:
  Stable for alpha, wrt bug #481146

  02 Sep 2013; Agostino Sarubbo <ago@gentoo.org> imagemagick-6.8.6.8.ebuild:
  Stable for x86, wrt bug #481146

*imagemagick-6.8.6.8-r1 (31 Aug 2013)

  31 Aug 2013; Samuli Suominen <ssuominen@gentoo.org>
  +files/imagemagick-6.8.6.8-broken_glib_version_check.patch.patch,
  +imagemagick-6.8.6.8-r1.ebuild:
  Fix broken glib version check that prevented conversion from .svg to .png wrt