@@ -13,19 +13,15 @@ EBUILD imagemagick-6.7.8.7.ebuild 4262 SHA256 4999aaa5ca86a056bad155e48656256225
 EBUILD imagemagick-6.8.6.1.ebuild 4284 SHA256 48159b8d51d9245dd50015dc622b3c355115e6d54ea9f30f939f3a3ee2924124 SHA512 15153776de1706442b369cdec7dc7d181d3d7b8899769256fcff03b8936723f1e75653c44f82bf60518db474be677b9ae757e87595dddf1b3a57478ff0468c5c WHIRLPOOL c1150bdb4f1850021b239d8f6fd2e3ee313fb298e517f1458bdeebe99d8ed4fbb6f734f3679d2bc6f2c66b5e0e478eb665a1aa22d45912c1fd1685305f0426e4
 EBUILD imagemagick-6.8.6.8-r1.ebuild 4614 SHA256 3dddfef8648a8ca870ea2452950687645b7c4f793390e700dd22cf022dd2d408 SHA512 a06851ca35f86445e51ee6bd682054f2897d119df479b9bc9f2d0e30d4ea7575ba7c1a2b1d76dd055837501afadca46286775cf975e215a5aa49e51d2421b67f WHIRLPOOL 77a87160573cc51727cc13e5ff7480ffc76e5c0771b181bfd4e5efcc5ff0d95cbf0d4b126350310602e7a4722636673cad18cfd99577e86d7ad87870c5cd47ff
 EBUILD imagemagick-6.8.6.8.ebuild 4346 SHA256 5741890d4a1f48280481b5db16d87badfd528528cbaa902541a4317a7b0b79a8 SHA512 24031845c6c77af2966cb8161a9e3f541885f391f7c5275812eff6b0914cc2ea592481d3a44b7e0a65c126ef497dd9ba729fd88b1aff91e0111da38558b1dc54 WHIRLPOOL b35d517317e9d59a71093714e82b76dbdc8c6bbfee0a3c567079acd34f0747da672be46fc196dcceb08c905845e95ca7b1bfdd33e9f6a48f9c3fbfb3a31d4941
-EBUILD imagemagick-6.8.7.5.ebuild 4672 SHA256 f8754bee18587d9369506b497333bf112f4cd047b8a63ea0e55e70740103ac4c SHA512 2885ecd558adab502fc787318e800a19091d14a496313c5550e9616b28b0c8880edd7c44fc7d7fbb2a94ff08254d671f874343dd49083ee2897e183654f178f1 WHIRLPOOL 93b693a416be23a4096df218ae5ba70f3eaddb085208449e33a70e1d80392d71aecc7af46186324ba1dd343ab9780c6f4eda01301f11e7a3ffcfabad620883a2
-EBUILD imagemagick-6.8.8.1.ebuild 4682 SHA256 7c06918121f2c206d6f9596684617c76f988c190a99eb8bb74234abeba87ef18 SHA512 7ae969cb7e6eb40b56d7909300a5c6598dde953d78e1c8d4ee8240756af4ccbb221e5a43559d08acb3413b405d65b913f91f97cdb31d575b5226c57a62dc39b0 WHIRLPOOL a1de6dadfe6c4b90efeddd29f564534d84bad04f5dc9184427c4baaad61688e502da387fef1f2507862addaae868b3f158c79236bbb3c57c6c2f4934224f2b2e
-EBUILD imagemagick-6.8.8.2.ebuild 4693 SHA256 6a23749854cd5afc769979d895605d347046689ef6037014f949ead23cf46440 SHA512 fa59fb06757f96dc148b0d1753def92e03663705be01586748f1aa5a9d1b8e32b1b8ec3ce126f1780f5d5b6900d792ae383eb2014342b9835b9a2766e46ccf13 WHIRLPOOL b48ae18dadb0c8827305152ab79f0f25c965d845161be79d3dbd1ddd3ded6d3f1cc1a1e01e6bb8d50a98ce1d66d0e35a94c167d25c54ca14f2513abe2402c8d1
-MISC ChangeLog 77151 SHA256 698d3c311b86abb409021242bc3a75528b4850894dd4aa2fcab65e4f48eab372 SHA512 4c7398c63eec530f56cc5f6ac6a207b890d07440f4cab9c9d7694c9db97d6227cd16f8063b51250d0876c5ef60e6de165d7e15954a695faf8d909c17d4bfb2b5 WHIRLPOOL c0fe2e2544c84a627befb17e9a260c3c1dbc29ea9e3c0f9a1ebba9c4f2d92c0e2e5b67f26c1ca1c863b43611141105906d5ac0196ae94c8b30018e282e8f8e12
+EBUILD imagemagick-6.8.7.5.ebuild 4681 SHA256 0ef3f7955ca40a7f56cd5ca5f767eee3cc58cfda9be9991488591070ace8cf48 SHA512 0e2101f7877d4aa94a5886078aca92a071a70a861dcddf314de23d7e1719d01b5c5ca9847a10fcf37d174a4f2d080574ef1b006b5652bb66cbda12acb71cafa9 WHIRLPOOL e14eb6c028b64e27185f510ba9be3747fe6d9a826364cd1085d4ea55bc251862af9784b45b18e25b34d9d3e216d3fd90b7e7745520e0b751dbf33ed6f99d4a7d
+EBUILD imagemagick-6.8.8.1.ebuild 4688 SHA256 ba263c0b3ccc2a7b9813c035dda5700358270f5b9ff380b534b701950aedffbc SHA512 1a24f39b8ab8891a86e132f273a65d070510e86af752f9aa09a5eba7070c075076bf23190194945c598fa538eba20ccca51c9e39b024ddf4ffe29e49edb68e74 WHIRLPOOL cfed12327aefc19c217cffe25df42ff9025bd04681a3123a603fcaa720cfd51c893ea64b6e3f89240121fdeb7eabaaaee4e8fcc3106d43d645d6179f28c326f9
+EBUILD imagemagick-6.8.8.2.ebuild 4696 SHA256 80659cb598ed4f52f92ee82c7e3a3726787080e9ded9e7511950ad5f70b5c61a SHA512 77c181ebdaeec74900997727220edae18b77ff02fd20b2394b8c5fc04911617238bb1294524e441809f4180ec2154c2874860ffc54f7ac4f729ab06805dc2622 WHIRLPOOL 223cbc55a46ee56a47f9ca9f60b790154dadb812a2546205f67ee70e3e8932d04a27917cdf255a05e5182ec3fae7df62273c2ead393e840e5b756ab0a7762e10
+MISC ChangeLog 77318 SHA256 f306ff488965da1f27d8d63863be0adeff0b737a60b24d595f18a95ffd8cf777 SHA512 21c6d28d8497814977a66d971b1d60049d7089ea76f68c7c682ed63aa0a6956fe744101e5d0f8274448e43257057e0b1a4e973aa25b8151bab2c360f72c6006d WHIRLPOOL 7a26d617893f234d96bfa8b66285e7d88d50d4f8e8a6e7c712614217259f6e4c4653bdaec056fc7d2de8105b803c25610b6e8af594ee7dc36d00f3b8954ad67f
 MISC metadata.xml 1050 SHA256 c7fad295a9ca9207454a88d9794902dd76f732f01a439d29f94372ce9ae4af7d SHA512 d502e1038cd08123b1a0d25dccee6a4134bd8fc768c228042b546c8ee226432430107f76b506e946eb5a9b358c13115e5c6e7a1c80f3fe5b4061885263b0dbd7 WHIRLPOOL 675922fbabfacc2660f9572b61a3cee8bb0967b0df0e6e211271399dcb6edc050246344e5251e6a4a4411f8671f3c625d07f3606531662ab5b278fdcff692010
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJS3XAMAAoJEEdUh39IaPFNHyYH/3/4KpNHnunM/5HXLykVCgEg
-A4RKqxrn0drUydB0qiV2s8JOAI3plR98u96C8ECzu5c9orTr69Fpq7xH66AH5sd7
-3ZZVWjbakzA6wunXLdW6m4w/1ipR33OyVeIiFlha0l5IRw02TeQ3fuBhBkFZGTNR
-B4mpOW5+QwV0HYxBJWyRrgL7BFsG5K4HUdzbOtFz+OMwFxsWpQz2W4vd7FAa8Ics
-6QOFhQtjzADS68Aq5qORm0DQSEsx7am4KwFuAD784B6gfMWG9eLr5QDWC//749od
-MklrMUhjxnp1govID0KCRFVWBwP017zwXLLakc01FL8lHSQTtszuHXYc9bm2LHU=
-=/auO
+iEYEAREIAAYFAlLpEl0ACgkQL46suuyRem1UawCaAt7ON7HepmAsaaQ9TG+icMGf
+2foAn1EQ+/hZ6DEefW+LTga9YSB/6MTP
+=gpIS
 -----END PGP SIGNATURE-----
