@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/imagemagick
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.523 2014/01/20 18:54:04 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.524 2014/01/29 14:38:13 hattya Exp $
+
+  29 Jan 2014; Akinori Hattori <hattya@gentoo.org> imagemagick-6.8.7.5.ebuild,
+  imagemagick-6.8.8.1.ebuild, imagemagick-6.8.8.2.ebuild:
+  keyword ~ia64 wrt bug #465948
 
 *imagemagick-6.8.8.2 (20 Jan 2014)
 
